@@ -1,3 +1,9 @@
+Sat Mar 06 12:48:39 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* ace/Thread_Manager.cpp:
+
+	  Fixed a compilation error on Win32. 
+
 Fri Mar  5 23:09:14 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
         * ace/OS_NS_sys_socket.inl (closesocket):
